add shadow to profile pic

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -101,6 +101,7 @@ body {
     &.profile {
       width: 25px;
       height: 25px;
+      box-shadow: $shadow;
     }
 
     &:not(.profile):hover {
