replace svg icons with fontawesome icons and add icon shadows

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -56,7 +56,7 @@ $textShadow: rgba(0, 0, 0, .8) 1px 1px 0;
 
 body {
   @include font;
-  background: url("https://genericmale.github.io/MyAnimeListTheme/assets/background.jpg") center top no-repeat, $background;
+  background: url("./assets/background.jpg") center top no-repeat, $background;
 }
 
 .header {
@@ -83,7 +83,7 @@ body {
   border: none;
   left: 10px;
   text-align: left;
-  margin-top: -27px;
+  margin-top: -17px;
   float: left;
   user-select: none;
 
@@ -98,12 +98,7 @@ body {
     width: $iconSize;
     height: $iconSize;
     margin-right: 10px;
-
-    &.profile {
-      width: 25px;
-      height: 25px;
-      box-shadow: $shadow;
-    }
+    color: $fontColor;
 
     &:not(.profile):hover {
       background-color: transparent;
@@ -118,6 +113,7 @@ body {
       height: 18px;
       text-align: left;
       padding-top: 10px;
+      text-shadow: $textShadow;
 
       &:hover {
         text-decoration: underline;
@@ -125,11 +121,47 @@ body {
     }
 
     svg.icon {
-      fill: $fontColor;
-      width: $iconSize;
-      height: $iconSize;
-      top: 0 !important;
-      left: 0 !important;
+      display: none;
+    }
+
+    &:before {
+      @include fa;
+      text-shadow: $textShadow;
+    }
+
+    &.profile {
+      background-image: none !important;
+      &:before {
+        content: "\f007";
+      }
+    }
+
+    &.quick-add:before  {
+      content: "\f0fe";
+    }
+
+    &.anime-list:before  {
+      content: "\f008";
+    }
+
+    &.manga-list:before  {
+      content: "\f02d";
+    }
+
+    &.history:before  {
+      content: "\f1da";
+    }
+
+    &.export:before  {
+      content: "\f15b";
+    }
+
+    &.logout:before  {
+      content: "\f08b";
+    }
+
+    &.setting:before  {
+      content: "\f013";
     }
 
     &.setting {
@@ -509,7 +541,7 @@ body {
                   bottom: 0;
                   right: 0;
                   position: absolute;
-                  content: '';
+                  content: "";
                   background: linear-gradient(rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.9));
                 }
 
